--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "qrcodeapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://joomoodle.github.io/qrcode/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.0",
+    "react-art": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-qr-code": "^0.1.3",
     "react-scripts": "3.4.0"
   },
   "scripts": {
